--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
 <body>
     <h1>TIC TAC TOE</h1>
     <div id="container"> 
+        <div id="gameBoard">
 
+        </div>
+        <div id="info">
+
+        </div>
     </div>
+    
 
     <script src="script.js"></script>
 </body>
