improved names input

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 </head>
 <body>
     <h1>TIC TAC TOE</h1>
+    <div class="inputs">
+        <form id="form">
+            <label for="playerOne">Plaer 1 name:</label><br>
+            <input type="text" id="playerOne" name="PlayerOne" value=""><br>
+            <label for="playerTwo">Player 2 name:</label><br>
+            <input type="text" id="playerTwo" name="playerTwo" value=""><br><br>
+            <input type="submit" value="Submit" id="submit">
+        </form>
+    </div>
     <div id="container"> 
         <div id="gameBoard">
 
